--- a/tour.html
+++ b/tour.html
@@ -108,11 +108,11 @@ ol {
 <section>
   <nav>
     <ul>
-      <li><a href="#">Home Page</a></li>
-      <li><a href="#">About the Band</a></li>
-      <li><a href="#">Top Albums</a></li>
-      <li><a href="#">Media</a></li>
-      <li><a href="#">Tour</a></li>
+      <li><a href="index.html">Home Page</a></li>
+      <li><a href="about_the_band.html">About the Band</a></li>
+      <li><a href="top_albums.html">Top Albums</a></li>
+      <li><a href="media.html">Media</a></li>
+      <li><a href="tour.html">Tour</a></li>
     </ul>
      <img src="https://img.pngio.com/twenty-one-pilots-logo-transparent-tumblr-twenty-one-pilots-logo-transparent-250_250.png" alt="TOP Logo">
   </nav>
