--- a/media.html
+++ b/media.html
@@ -137,7 +137,7 @@ src="https://youtu.be/UOUBW8bkjQ4" frameborder=“0” allow=“accelerometer; a
  
  <tr>
  <td><iframe width="400" height="225"
-src="https://youtu.be/hMAPyGoqQVw frameborder=“0” allow=“accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture” allowfullscreen"></iframe></td>
+src="https://youtu.be/hMAPyGoqQVw" frameborder=“0” allow=“accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture” allowfullscreen></iframe></td>
  </tr>
 
  <tr>
